# XMLFoundation

./: Changelog.txt  HowToBuildLibAndExamples.txt  LICENSE  Output-Build.txt  READ.me.txt  README.md  XMLFoundation.vs2022.sln
Drivers/: 5Loaves.txt  Drivers.dsw
Drivers/COM/: DriverCOM.cpp  DriverCOM.dsp  DriverCOM.dsw  DriverCOM.h  IntegrationCOM.cpp  IntegrationCOM.h  StdAfx.cpp  StdAfx.h
Drivers/CStdCall/: DriverCStdCall.cpp  DriverCStdCall.dsp  IntegrationCStdCall.cpp  IntegrationCStdCall.h  makefile.linux  makefile.sun
Drivers/Java2/: DriverJava2.dsp  IntegrationJava.cpp  IntegrationJava.h  Java2.cpp  StdAfx.cpp  StdAfx.h  makefile.linux  makefile.sun
Drivers/Perl/: DriverPerl.cpp  DriverPerl.dsp  DriverPerl.h  IntegrationPerl.cpp  IntegrationPerl.h  StdAfx.cpp  StdAfx.h  makefile.linux  makefile.sun
Drivers/Python/: DriverPython.cpp  DriverPython.dsp  DriverPython.h  IntegrationPython.cpp  IntegrationPython.h  makefile.linux  makefile.sun
Examples/AndroidStudio/MyApp/app/src/main/cpp/: CMakeLists.txt  ExampleObjectModeling.cpp  XMLFoundationApp.cpp  XMLFoundationApp.h  native-lib.cpp
Examples/DotNETMauiBlazor/: DotNETMauiBlazor.sln
Examples/Perl/: Example.pl  PerlTest.pl
Examples/Python/: Example.py
Examples/iPhone/: ReadMe.txt
Libraries/: ReadMe.txt
Servers/5Loaves/: 5Loaves.dsp  5Loaves.plg  5Loaves.txt  5Loaves.vcxproj  5Loaves.vcxproj.filters  5Loaves.vs2022.vcxproj  5Loaves.xml  5LoavesUnix.txt  Console.cpp  makefile.linux  makefile.linux64  makefile.solaris
Servers/5LoavesDLL/: 5LoavesDLL.cpp  5LoavesDLL.dsp  5LoavesDLL.h  StdAfx.h  (+8 more)
(+657 files in other folders)
